--- a/crucible-react/src/components/console/consoleWindow.css
+++ b/crucible-react/src/components/console/consoleWindow.css
@@ -1,7 +1,14 @@
 #console-window {
 	border: 2px solid red;
-	width: 20%;
+	/*width: 20%;*/
 	max-width: 200px;
 	display: flex;
 	height: 500px;
+	flex-direction: column;
+}
+
+#facts-container {
+	border: 2px solid green;
+	display: flex;
+	flex-direction: column;
 }
