--- a/crucible-react/src/App.css
+++ b/crucible-react/src/App.css
@@ -1,6 +1,16 @@
+.App, main {
+  height: 100%;
+}
+
 .App {
   text-align: center;
   background-color: #ffb677;
+  /*height: 100vh;*/
+}
+
+main {
+  border: 2px solid black;
+  display: flex;
 }
 
 .App-logo {
