--- a/crucible-react/src/components/console/console.css
+++ b/crucible-react/src/components/console/console.css
@@ -1,5 +1,7 @@
 #console-container {
 	display: flex;
+	height: 100%;
+	border: 2px solid yellow;
 }
 
 #console-topic-menu-container {
@@ -11,7 +13,7 @@
 	/*width: 20%;*/
 	max-width: 200px;
 	display: flex;
-	height: 500px;
+	/*height: 500px;*/
 	flex-direction: column;
 }
 
