--- a/crucible-react/src/index.css
+++ b/crucible-react/src/index.css
@@ -1,3 +1,11 @@
+html, body, #root {
+  height: 100%;
+}
+
+html {
+  border: 2px solid blue;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +13,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  border: 2px solid red;
+  /*height: 100%;*/
+}
+
+#root {
+  border: 2px solid purple;
 }
 
 code {
