--- a/crucible-react/src/containers/sidenav.css
+++ b/crucible-react/src/containers/sidenav.css
@@ -4,13 +4,14 @@
 	/*top: 0;*/
 	/*bottom: 0px;*/
 	/*width: 200px;*/
-	/*left: 0px;*/
+	/*left: -100px;*/
 	height: 100%;
 	background-color: silver;
 	border: 2px solid green;
 	display: flex;
 	/*flex-grow: 1;*/
 	/*flex-direction: vertical;*/
+	transition: .2s
 }
 
 
