--- a/crucible-react/src/containers/discussions.css
+++ b/crucible-react/src/containers/discussions.css
@@ -20,3 +20,42 @@
 	/*overflow: scroll;*/
 	text-align: justify;
 }
+
+#comment-popup {
+  background: white;
+  color: #333;
+  font-weight: bold;
+  padding: 4px 8px;
+  font-size: 13px;
+  border-radius: 4px;
+}
+
+#arrow,
+#arrow::before {
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  z-index: -1;
+}
+
+#arrow::before {
+  content: '';
+  transform: rotate(45deg);
+  background: white;
+}
+
+#comment-popup[data-popper-placement^='bottom'] > #arrow {
+  top: -4px;
+}
+
+#comment-popup[data-popper-placement^='top'] > #arrow {
+  bottom: -4px;
+}
+
+#comment-popup[data-popper-placement^='left'] > #arrow {
+  right: -4px;
+}
+
+#comment-popup[data-popper-placement^='right'] > #arrow {
+  left: -4px;
+}
