comment popper now only appears on mouseover

--- a/crucible-react/src/containers/discussions.css
+++ b/crucible-react/src/containers/discussions.css
@@ -28,13 +28,10 @@
   padding: 4px 8px;
   font-size: 13px;
   border-radius: 4px;
-}
-
-#selection-popup {
   display: none;  
 }
 
-#selection-popup[data-show] {
+#selection-popup[data-show], #comment-popup[data-show]{
   display: block;
 }
 
