--- a/crucible-react/src/containers/discussions.css
+++ b/crucible-react/src/containers/discussions.css
@@ -34,7 +34,11 @@
   padding: 4px 8px;
   font-size: 13px;
   border-radius: 4px;
+}
+
+#selection-popup {
   display: none;  
+  
 }
 
 #selection-popup[data-show], #comment-popup[data-show]{
