--- a/crucible-react/src/containers/discussions.css
+++ b/crucible-react/src/containers/discussions.css
@@ -35,7 +35,15 @@
   font-size: 13px;
   border-radius: 4px;
   /*display: none;  */
+}
 
+#collect-fact-button {
+  background: steelblue;
+  color: white;
+  font-weight: bold;
+  padding: 8px 16px;
+  font-size: 2em;
+  border-radius: 4px;
 }
 
 /*#selection-popup[data-show], #comment-popup[data-show]{
