--- a/crucible-react/src/containers/sidenav.css
+++ b/crucible-react/src/containers/sidenav.css
@@ -11,7 +11,9 @@
 	display: flex;
 	/*flex-grow: 1;*/
 	/*flex-direction: vertical;*/
-	transition: .2s
+	transition: .2s;
+	z-index: 1;
+	/*opacity: 0.1;*/
 }
 
 
@@ -23,10 +25,12 @@
 #sidenav-details-pane {
 	border: 2px solid yellow;
 	max-width: 200px;
+	/*z-index: 1;*/
 }
 
 #sections-list {
 	border: 1px solid blue;
+	/*opacity: 0;*/
 	/*display: flex;*/
 	/*flex-direction: column;*/
 }
