--- a/crucible-react/src/App.css
+++ b/crucible-react/src/App.css
@@ -6,8 +6,11 @@
 
 .App {
   text-align: center;
-  background-color: #ffb677;
+  /*background-color: #ffb677;*/
+  /*background-color: #ffc97b /*azure*//*whitesmoke*/
+  background-color: whitesmoke;
   /*height: 100vh;*/
+  /*background-image: linear-gradient(to bottom right, #ADD8E6, #fff);*/
 }
 
 main {
@@ -15,6 +18,7 @@ main {
   flex-grow: 1;
   max-height: 95vh;
   display: flex;
+  justify-content: center
 }
 
 .App-logo {
