--- a/crucible-react/src/components/navigation/navigation.css
+++ b/crucible-react/src/components/navigation/navigation.css
@@ -2,8 +2,10 @@
   display: flex;
   justify-content: space-between;
   border: 1px solid black;
-  background-color: #d34c26;
+  background-color: #44558f;
   height: 5vh;
+  /*background-image: linear-gradient(to bottom right, #ADD8E6, #fff);*/
+
 }
 
 #menu-options {
@@ -13,6 +15,7 @@
 
 .nav-link {
 	margin: 0 10px;
+	color: white;
 }
 
 #profile-options {
