--- a/crucible-react/src/containers/sidenav.css
+++ b/crucible-react/src/containers/sidenav.css
@@ -15,34 +15,49 @@
 	z-index: 1;
 	/*justify-content: left*/
 	/*opacity: 0.1;*/
+	color: white;
 }
 
-#main-pane {
-	border: 2px solid red;
+#sidenav-main-pane {
+	/*border: 2px solid red;*/
+	width: 0;
 	text-align: left;
 	justify-content: left;
-	color: red;
-	background-color: silver;
+	background-color: #2c3539;
+	transition: width .2s;
+	overflow: hidden;
+	border-right: 2px solid gold;
+}
+
+#console-topic-menu-container, #agora-menu {
+	padding: 20px 5px;
+	width: 90px;
+	/*color: red;*/
 }
 
 #sidenav-details-pane {
-	border: 2px solid yellow;
-	max-width: 200px;
-	/*z-index: 1;*/
-	background-color: silver;
+	border-right: 2px solid gold;
+	width: 0;
+	/*background-color: #708090;*/
+	background-color: #738598;
+	/*background-color: rgb(38, 50, 56);*/
+	transition: .2s;
+	overflow: hidden;
 }
 
 #sections-list {
 	/*border: 1px solid blue;*/
 }
 
-#group-details-menu {
+#group-details-menu, #console-window {
 	padding: 10px;
+	width: 180px;
 	/*color:yellow;*/
 }
 
 .sidenav-list {
 	text-align: left;
+	padding-bottom: 20px ;
 }
 
 .discussion-item {
@@ -54,15 +69,17 @@
 }
 
 .section-tab {
-	border: 2px solid pink;
+	font-family: 'Abel', sans-serif;
+	/*border: 2px solid pink;*/
 	border-radius: 0px 5px 5px 0px;
 	padding: 5px 0;
 	/*border: 1px solid purple;*/
 	writing-mode: vertical-rl;
 	text-orientation: mixed;
 	/*background-color: #44558f;*/
-	background-color: pink;
-	color: white;
+	background-color: #FFDF00;
+	color: black;
+	font-weight: bold;
 }
 
 /*.section-tab::before {
