--- a/crucible-react/src/containers/sidenav.css
+++ b/crucible-react/src/containers/sidenav.css
@@ -103,3 +103,15 @@
 .highlight {
 	background-color: cyan
 }
+
+.selected-section {
+	/*box-shadow: 0 0 5px gray;*/
+/*	border-right: 2px solid #2c3539;
+	border-top: 2px solid #2c3539;
+	border-bottom: 2px solid #2c3539;*/
+}
+
+.unselected-section {
+	/*background-color: gold*/
+	background-color: silver
+}
