searching for new group members displays selectable drop-down

--- a/crucible-react/src/components/console/console.css
+++ b/crucible-react/src/components/console/console.css
@@ -23,6 +23,8 @@
 
 #console-fact-list-container {
 	border: 2px solid black;
+	max-height: 300px;
+	overflow: scroll;
 }
 
 #console-facts-container {
