--- a/crucible-react/src/containers/sidenav.css
+++ b/crucible-react/src/containers/sidenav.css
@@ -96,8 +96,17 @@
   /*display: none;  */
 }
 
+#suggestions-box {
+	position: absolute;
+	/*background-color: green;*/
+	background-color: white;
+	border: 1px solid black;
+	border-top: 0px;
+	border-radius: 5px
+}
+
 .member-suggestion {
-	border: 1px solid green;
+	/*border: 1px solid green;*/
 }
 
 .highlight {
