--- a/crucible-react/src/containers/discussions.css
+++ b/crucible-react/src/containers/discussions.css
@@ -53,7 +53,20 @@ font-family: 'Roboto Mono', monospace;
   padding: 4px 8px;
   font-size: 13px;
   border-radius: 4px;
+  max-width: 200px;
   /*display: none;  */
+}
+
+.new-comment-fact {
+  background-color: darkcyan;
+  border: 2px solid blue;
+  border-radius: 5px;
+
+  line-height: 1.2em;
+  max-height: 3.6em;
+  overflow: hidden;
+  margin: 5px;
+  /*box-shadow: inset 0 -20px 5px white;*/
 }
 
 .popup {
